[project]
name = "related-posts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "mistune>=3.1.4",
    "networkx>=3.5",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]

[tool.black]
line-length = 88

[tool.ruff.lint]
select = ["I"]
